# esp32c6-wifi-provisioner

./: readme.md
client_app/: Cargo.toml  readme.md
client_app/src/: app.rs  ble_constants.rs  main.rs  models.rs  repositories.rs  services.rs  utils.rs
esp32c6_stable/: Cargo.toml  readme.md
esp32c6_stable/.github/workflows/: rust_ci.yml
esp32c6_stable/src/: board.rs  lib.rs  storage.rs
esp32c6_stable/src/app/: mod.rs  runner.rs  state.rs
esp32c6_stable/src/comm/: mod.rs
esp32c6_stable/src/comm/ble/: advertiser.rs  mod.rs
esp32c6_stable/src/comm/ble/handlers/: gatt_events.rs  mod.rs  notifier.rs
esp32c6_stable/src/comm/ble/utils/: char_action.rs  mod.rs
esp32c6_stable/src/comm/wifi/: mod.rs  models.rs  runner.rs  utils.rs
esp32c6_stable/src/errors/: ble_error.rs  mod.rs  storage_error.rs  wifi_error.rs
esp32c6_stable/src/utils/: mod.rs
