[package]
name = "client_app"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug = { version = "0.12.0", features = ["serde"] }
tokio = { version = "1.51.0", features = ["full"] }
uuid = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
dialoguer = "0.12.0"
anyhow = "1.0.102"
