[package]
edition      = "2024"
name         = "esp32c6_stable"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp32c6_stable"
path = "./src/bin/main.rs"
test = false

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32c6", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6", "log-04"] }
log                    = "0.4.27"

esp-storage = { version = "0.8.1", features = ["esp32c6"] }
embedded-storage = "0.3.1"

embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
  "icmp",
  "raw",
  "dns"
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32c6",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32c6", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = "0.6.0"
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"

esp-radio = { version = "0.17.0", features = [
  "ble",
  "coex",
  "esp-alloc",
  "esp32c6",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc" }

trouble-host = { version = "0.5.0", features = [
  "gatt",
  "default-packet-pool-mtu-255",
  "derive",
  "scan",
] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

heapless = { version = "0.8.0", default-features = false, features = ["serde"] }
portable-atomic = { version =  "1.13.1", default-features = false }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
